--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="title" >Sakthi Sekar</h1>
             <p class="section__text__p2">Software Engineer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/Sakthi-Resume.pdf')">Download CV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#Contact'">Contact Info</button>
             </div>
             <div id = "socials-container">
@@ -174,13 +174,13 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/vr.png" alt="Project 1"
+                        <img src="./assets/food-munch.png" alt="Project 1"
                         class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title projecr-title">VR web page</h2>
+                    <h2 class="experience-sub-title projecr-title">food-munch page</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/sakthi-sekar-18/Web-development.git'" >Github</button>
+                        onclick="location.href='https://sakthi-sekar-18.github.io/Foods-Demo/'" >Github</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
