--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
                 <li><a href="#Experience" onclick="toggleMenu()">Experience</a></li>
                 <li><a href="#Projects" onclick="toggleMenu()">Projects</a></li>
-                <li><a href="#Contact" onclick="toggleM enu()">Contact</a></li>
+                <li><a href="#Contact" onclick="toggleMenu()">Contact</a></li>
             </div>
         </div>
     </nav>
@@ -185,13 +185,13 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/expense.png" alt="Project 2"
+                        <img src="./assets/vr.png" alt="Project 2"
                         class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title projecr-title">Expense-Tracker</h2>
+                    <h2 class="experience-sub-title projecr-title">VR web</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/sakthi-sekar-18/Expense-Tracker.git'" >Github</button>
+                        onclick="location.href='https://sakthi-sekar-18.github.io/Web-development/'" >Github</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
